Fix up some layout bugs with some of the previous fixes

--- a/src/style.css
+++ b/src/style.css
@@ -112,6 +112,7 @@ code {
   padding: 12px;
   display: flex;
   gap: 12px;
+  align-items: center;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -147,6 +148,7 @@ code {
   overflow-y: auto;
   scrollbar-width: none;
   min-height: 0;
+  padding-block: 4px;
 }
 
 [data-type='split'][data-overflow='wrap'] {
@@ -167,13 +169,13 @@ code {
 }
 
 [data-separator] {
-  border-bottom: 5px solid #000;
   grid-column: span 2;
+  height: 5px;
+  background-color: #000;
 }
 
 [data-code] {
   display: block;
-  padding-block: 4px;
   text-align: left;
   display: grid;
   grid-auto-flow: dense;
@@ -191,21 +193,22 @@ code {
   display: contents;
 }
 
-[data-type='split'][data-overflow='scroll'] [data-code] {
-  grid-template-rows: repeat(auto-fill, 1lh);
-  grid-auto-rows: 1lh;
-}
-
 [data-line] {
   display: grid;
   grid-template-columns: subgrid;
   grid-column: 1 / 3;
 }
 
+[data-column-content],
+[data-column-number] {
+  padding-inline: 8px;
+}
+
 [data-buffer] {
   grid-column: 1 / 3;
   user-select: none;
   background-color: rgba(0, 0, 0, 0.2);
+  min-height: 1lh;
 }
 
 [data-type='split'][data-overflow='wrap'] [data-deletions] [data-line],
@@ -259,11 +262,9 @@ code {
 }
 
 [data-column-number] {
-  padding-right: 8px;
   text-align: right;
   position: sticky;
   left: 0;
-  padding-inline: 8px;
   user-select: none;
   min-width: 32px;
   color: color-mix(in srgb, currentColor 50%, #fff);
